// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions for Fetch Fetch creates a FETCH action 1`] = `
Array [
  Object {
    "payload": Promise {
      "_40": 0,
      "_55": Promise {
        "_40": 0,
        "_55": null,
        "_65": 0,
        "_72": null,
      },
      "_65": 3,
      "_72": null,
    },
    "type": "FETCH",
  },
]
`;

exports[`Actions for Fetch Fetch creates a FETCH_FAILURE action 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "internal server error",
    },
    "type": "FETCH_FAILURE",
  },
]
`;

exports[`Actions for Fetch Fetch creates a FETCH_SUCCESS action 1`] = `
Array [
  Object {
    "payload": Object {
      "data": Array [
        Object {
          "body": "body",
          "id": "1",
          "title": "title",
        },
        Object {
          "body": "body",
          "id": "2",
          "title": "title",
        },
      ],
    },
    "type": "FETCH_SUCCESS",
  },
]
`;

exports[`Actions for Fetch Fetch creates a RESET_FETCH action 1`] = `
Array [
  Object {
    "type": "RESET_FETCH",
  },
]
`;
